--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #F9FAFB;
+}
